# selected-sources

./: CNAME  README.md  _config.yml
Application/: README.md
Application/EXRAutoCropper/src/: exr_io.cpp  main.cpp
Application/OpenEXRResizer/: Makefile
Application/OpenEXRResizer/inst/: test.crypto.sh  test.m90267.sh
Application/OpenEXRResizer/src/: exrio.cpp  main.cpp
Arnold-Procedurals/: README.md
Arnold-Procedurals/speedtreeKit/speedtreeOp/: .gitignore  Makefile  README.md
Arnold-Procedurals/speedtreeKit/speedtreeProc/: Makefile
Arnold-Shaders/: README.md
Arnold-Shaders/parallax_map/: Makefile
Arnold-Shaders/parallax_map/src/: lc_parallax_map.args  lc_parallax_map.cpp  lc_parallax_map.h
Arnold-Shaders/texture_repetition/: Makefile
Arnold-Shaders/texture_repetition/src/: lc_texture_blend.args  lc_texture_blend.cpp  (+6 more)
Arnold-Shaders/triplanar_plus/: Makefile  README.md
Katana-Plugins/: README.md
Katana-Plugins/LightViewerModifier/: CMakeLists.txt  build.sh
Katana-Plugins/LightViewerModifier/LightViewerModifier/: CMakeLists.txt
Katana-Plugins/LightViewerModifier/LightViewerModifier/src/: LightViewerModifier.cpp  LightViewerModifier.old.cpp
Katana-SuperTools/: README.md
Katana-SuperTools/ArnoldLightGafferPackage/: __init__.py
OSL-Shaders/: README.md
OSL-Shaders/shaders/: condition_closure.osl  condition_color.osl  condition_float.osl  layer_closure.osl  layer_color.osl  layer_normal.osl  ramp_p4.osl  remap_color.osl  remap_float.osl  switch_closure.osl  switch_color.osl  switch_float.osl
Procedurals/: README.md
Standalone-bin/EXRAutoCropper/: Makefile
UE4-Plugins/: README.md
USD-Scripts/: README.md
(+94 files in other folders)
